# roberta-ops

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: main.py
